--- a/practica-shellsort.html
+++ b/practica-shellsort.html
@@ -82,6 +82,6 @@
         <!-- Contenedor para mostrar el arreglo ordenado en orden descendente -->
         <div id="sortedArrayDesc"></div>
     </div>
-    <script src="js/funciones.js"></script>
+    <script src="funciones.js"></script>
 </body>
 </html>
